--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
      }
      .research_links {
          display: inline;
-         margin: 25%;
+         margin-left: 25%;
+         padding-bottom: 25px;
      }
      .sub_section {
          border: solid 1px #eee;
@@ -47,6 +48,10 @@
      #content_date {
          margin:auto;
          display:table;
+     }
+     .link_boxes {
+         margin-left: 25%;
+         display: inline-block;
      }
     </style>
 
@@ -57,10 +62,10 @@
             <select id = "country_picker"> </select>
             <p>Select a country from the drop down to get started.</p>
             <div id="anomaly_info" class="sub_section">
-                <div id="content_date"></div><br />
+                <div id="content_date"></div>
                 <div class="research_links">
-                    <div id="twit_link"></div><br />
-                    <div id="goo_link"></div><br />
+                    <div id="twit_link" class="link_boxes"></div>
+                    <div id="goo_link" class="link_boxes"></div>
                 </div>
             </div>
             <strong> Click on a green or red dot in a graph to get links to possible censorship events on that date.</strong>
