Cleaning up the general look

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
      .sub_section {
          border: solid 1px #eee;
          border-bottom: solid 1px #ccc;
+         margin-top: 25px;
      }
      .link_boxes {
          display: inline-block;
